sample-app-v1/k8s/overlays/prod/increase_replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment-base
spec:
  replicas: 2
