sample-app-v1/k8s/overlays/prod/set_memory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment-base
spec:
  template:
    spec:
      containers:
      - name: python-docker
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "500m"
