sample-app-v1/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-base  
spec:
  rules:
    - http:
        paths:
          - path: /prod-ns/(.*)
            pathType: Prefix
            backend:
              service:
                name: app-svc-base
                port:
                  number: 80
